# switch-meson-example

./: aarch64-horizon  build.py  meson.build
source/: meson.build
